objects/Partner_Portal_Deal_Registration_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Lab_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lab Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Guides__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Guides</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Portal Tabs and Sections Config</label>
</CustomObject>